--- a/release-please-config.json
+++ b/release-please-config.json
@@ -5,7 +5,11 @@
       "package-name": "pomo-pal",
       "changelog-path": "CHANGELOG.md",
       "bump-minor-pre-major": true,
-      "bump-patch-for-minor-pre-major": true
+      "bump-patch-for-minor-pre-major": true,
+      "extra-files": [
+        "frontend/package.json",
+        "VERSION"
+      ]
     }
   }
 }
